--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --aot --prod"
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -16,7 +16,7 @@
     "@angular/common": "~10.0.2",
     "@angular/compiler": "~10.0.2",
     "@angular/compiler-cli": "10.0.2",
-    "@angular/cli": "10.0.2",
+    "@angular/cli": "10.0.1",
     "@angular/core": "~10.0.2",
     "@angular/forms": "~10.0.2",
     "@angular/platform-browser": "~10.0.2",
@@ -27,7 +27,8 @@
     "bootstrap": "^4.5.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "typescript": "~3.9.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.1",
